# ChangeLog for dev-ruby/dm-validations
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*dm-validations-1.2.0 (29 Oct 2013)

  29 Oct 2013; Peter Wilmott <p@p8952.info> +dm-validations-1.2.0.ebuild,
  +metadata.xml:
  dev-ruby/dm-validations: Initial commit, dependency for datamapper(dm)-1.2.x